example/lib/src/generated/errors/errors_localization_sw.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Swahili (`sw`).
class ErrorsLocalizationSw extends ErrorsLocalization {
  ErrorsLocalizationSw([String locale = 'sw']) : super(locale);

  @override
  String get error => 'Hitilafu imetokea';

  @override
  String get unexpectedError => 'Hitilafu isiyotarajiwa imetokea';

  @override
  String get bugReportSentText => 'Ripoti ya hitilafu imetumwa kwa mafanikio.';
}
